# stac-cog-xarray

./: 404.html  ARCHITECTURE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: benchmarks.yml
api/: index.html
architecture/: index.html
demo/: index.html
docs/: api.md  demo.ipynb
lazycogs-odc-stac/: index.html
scripts/: prepare_benchmark_data.py
search/: search_index.json
src/lazycogs/: __init__.py  _backend.py  _chunk_reader.py  _core.py  _executor.py  _explain.py  _grid.py  _mosaic_methods.py  _reproject.py  _store.py  _temporal.py
src/stac_cog_xarray/: __init__.py  _backend.py  _chunk_reader.py  _core.py  _explain.py
tests/: conftest.py  integration_test.py  test_backend.py  test_chunk_reader.py  test_core.py  test_explain.py  test_grid.py  test_mosaic_methods.py  test_rasterio_parity.py  test_reproject.py  test_store.py  test_temporal.py
tests/benchmarks/: bench_pipeline.py  conftest.py
