[project]
name = "lazycogs"
version = "0.1.0"
description = "Lazily load COG assets from STAC items into xarray DataArrays using async-geotiff"
readme = "README.md"
authors = [
    { name = "hrodmn", email = "henry.rodman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "async-geotiff>=0.4.0",
    "numpy>=2.4.4",
    "obstore>=0.9.2",
    "pyproj>=3.7.2",
    "rustac>=0.9.9",
    "xarray>=2026.2.0",
]

[project.optional-dependencies]
dask = [
    "dask>=2026.3.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lazycogs[dask]",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "pytest>=9.0.3",
]
docs = [
    "mkdocs-jupyter>=0.26.2",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]

[tool.ruff]
exclude = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"
